[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Resources/stone.png" type="Texture" id=1]
[ext_resource path="res://Inventory/InventoryItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.517647, 0.0627451, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0941176, 0.470588, 0.184314, 1 )

[node name="InventoryItem" type="HBoxContainer"]
margin_right = 372.0
margin_bottom = 32.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 36.0
margin_right = 41.0
margin_bottom = 32.0
rect_min_size = Vector2( 5, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 45.0
margin_top = 9.0
margin_right = 190.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Stone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThroughputLabel" type="Label" parent="."]
margin_left = 194.0
margin_right = 230.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.156863, 0.133333, 0.133333, 1 )
text = "Stone"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="."]
margin_left = 234.0
margin_right = 266.0
margin_bottom = 32.0
size_flags_vertical = 1
text = "0000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = 270.0
margin_right = 275.0
margin_bottom = 32.0
rect_min_size = Vector2( 5, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 279.0
margin_right = 329.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 1.0
margin_top = 27.0
margin_right = 22.0
margin_bottom = 41.0
rect_rotation = -90.0
rect_scale = Vector2( 1, 0.1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 333.0
margin_right = 372.0
margin_bottom = 32.0
text = "Sell!"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
